# aftp

./: CMakeLists.txt
include/: client.h  defs.h  helpers.h  server.h  sm.h  srv_sm.h
src/: helpers.c  main.c
src/client/: client.c  sm.c
src/srv/: server.c  srv_sm.c
